Bug 307809 - TJ scheduler does not respect resource availablefrom/-until
Summary: TJ scheduler does not respect resource availablefrom/-until
Status: RESOLVED FIXED
Alias: None
Product: calligraplan
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Dag Andersen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-04 06:54 UTC by Dag Andersen
Modified: 2012-10-31 11:35 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.5.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dag Andersen 2012-10-04 06:54:23 UTC
Resource may be assigned to tasks even when it should not be available

Reproducible: Always
Comment 1 Dag Andersen 2012-10-04 11:30:42 UTC
Git commit aedb3d00414f0b6c476b73a139a4214f58d30b66 by Dag Andersen.
Committed on 04/10/2012 at 09:09.
Pushed by danders into branch 'calligra/2.5'.

Fix Bug 307809 -  TJ scheduler does not respect resource availablefrom/-until
FIXED_IN: 2.5.3

M  +4    -4    plan/plugins/schedulers/tj/PlanTJScheduler.cpp

http://commits.kde.org/calligra/aedb3d00414f0b6c476b73a139a4214f58d30b66
Comment 2 Dag Andersen 2012-10-24 14:46:02 UTC
Git commit 21bf944664dd318f855757c461dd3027f73ad81d by Dag Andersen.
Committed on 04/10/2012 at 08:57.
Pushed by danders into branch 'master'.

Fix Bug 307809 -  TJ scheduler does not respect resource availablefrom/-until

M  +10   -5    plan/plugins/schedulers/tj/PlanTJScheduler.cpp

http://commits.kde.org/calligra/21bf944664dd318f855757c461dd3027f73ad81d
Comment 3 Jarosław Staniek 2012-10-31 11:35:09 UTC
Git commit 5a6634f5272d36602933f40704ac143c8e68e07e by Jaroslaw Staniek, on behalf of Dag Andersen.
Committed on 04/10/2012 at 08:57.
Pushed by staniek into branch 'kexi-altertable-staniek'.

Fix Bug 307809 -  TJ scheduler does not respect resource availablefrom/-until

M  +10   -5    plan/plugins/schedulers/tj/PlanTJScheduler.cpp

http://commits.kde.org/calligra/5a6634f5272d36602933f40704ac143c8e68e07e