Fix Bug 307809 -  TJ scheduler does not respect resource availablefrom/-until

BUG: 307809
FIXED_IN: 2.5.3